welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:4: error: type mismatch;
 found   : Unit
 required: Int
  for ( c <- 0 to l-1){
          ^